--- a/layouts/shortcodes/esri_map.html
+++ b/layouts/shortcodes/esri_map.html
@@ -3,35 +3,42 @@ iframe src="modals/marine_life/esri_example.html"
     width="300" height="300"
 /iframe
 -->
+<!DOCTYPE html>
+<html>
+<head>
+    <!-- Load Leaflet from CDN -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
+        integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+        crossorigin=""
+    />
 
-<!-- Load Leaflet from CDN -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css"
-    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-    crossorigin=""
-/>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
+        integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
+        crossorigin="">
+    </script>
 
-<script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"
-    integrity="sha512-QVftwZFqvtRNi0ZyCtsznlKSWOStnDORoefr1enyq5mVL4tmKB3S/EnC3rRJcxCPavG10IcrVGSmPh6Qw5lwrg=="
-    crossorigin="">
-</script>
+    <!-- Load Esri Leaflet from CDN -->
 
-<!-- Load Esri Leaflet from CDN -->
+    <script src="https://unpkg.com/esri-leaflet@2.2.4/dist/esri-leaflet.js"
+        integrity="sha512-tyPum7h2h36X52O2gz+Pe8z/3l+Y9S1yEUscbVs5r5aEY5dFmP1WWRY/WLLElnFHa+k1JBQZSCDGwEAnm2IxAQ=="
+        crossorigin="">
+    </script>
 
-<script src="https://unpkg.com/esri-leaflet@2.2.4/dist/esri-leaflet.js"
-    integrity="sha512-tyPum7h2h36X52O2gz+Pe8z/3l+Y9S1yEUscbVs5r5aEY5dFmP1WWRY/WLLElnFHa+k1JBQZSCDGwEAnm2IxAQ=="
-    crossorigin="">
-</script>
+    <style>
+        /* body { margin:0; padding:0; } */
+        /* #map { position: absolute; top:0; bottom:0; right:0; left:0; } */
+        #map {
+            margin:0; padding:0;  width : 100%; height : 500px; position: fixed;
+        }
+    </style>
+</head>
+<body>
+    <div id="map"></div>
 
-<style>
-    /* body { margin:0; padding:0; } */
-    /* #map { position: absolute; top:0; bottom:0; right:0; left:0; } */
-    #map { position: absolute; top:0; bottom:0; right:0; left:0; }
-</style>
+    <script>
+      var map = L.map("map").setView([37.75, -122.23], 10);
 
-<div id="map"></div>
-
-<script>
-  var map = L.map("map").setView([37.75, -122.23], 10);
-
-  L.esri.basemapLayer("Topographic").addTo(map);
-</script>
+      L.esri.basemapLayer("Topographic").addTo(map);
+    </script>
+</body>
+</html>
