--- a/layouts/shortcodes/esri_map.html
+++ b/layouts/shortcodes/esri_map.html
@@ -27,7 +27,7 @@
         /* body { margin:0; padding:0; } */
         /* #map { position: absolute; top:0; bottom:0; right:0; left:0; } */
         #map {
-            margin:0; padding:0;  width : 100%; height : 500px; position: fixed;
+            margin:0; padding:0;  width : 100%; height : 400px; position: relative;
         }
     </style>
 </head>
