--- a/layouts/home.html
+++ b/layouts/home.html
@@ -15,7 +15,7 @@ An infographic will go here with clickable elements to the following pages:
  - <a href="modals/externalities/">Externalities</a>
  - <a href="modals/people/">People</a>
  - <a href="modals/marine_life/">Marine Life</a>
- - <a href="modals/info">Info</a>
+ - <a href="modals/info/">Info</a>
 
  <iframe src="svg/fl-keys.svg" width=100% height=1200>
 
