--- a/layouts/home.html
+++ b/layouts/home.html
@@ -7,7 +7,7 @@
   {{ partial "docs/inject/head" . }}
 </head>
 {{ $content := `
-# FKNMS MBON and IEA Webinized Infographic
+# FKNMS MBON and IEA Webinized Infographics
 
 This is a placeholder for home page.
 An infographic will go here with clickable elements to the following pages:
