--- a/layouts/modals/baseof.html
+++ b/layouts/modals/baseof.html
@@ -10,15 +10,18 @@
 <body>
   <input type="checkbox" style="display: none" id="menu-control" />
   <main class="flex container">
-    <aside class="book-menu fixed">
-      {{ partial "docs/menu" . }}
-    </aside>
-
-    <div class="book-posts">
-      {{ partial "docs/mobile-header" . }}
-      {{ template "main" . }}
-      {{ partial "docs/inject/footer" . }}
-    </div>
+    {{/* if or (and (isset .Params "toc") (.Params.toc)) (not isset .Params "toc") */}}
+    {{/* if or (.Params.toc) (not isset .Params "toc") */}}
+      <aside class="book-menu fixed">
+        {{ partial "docs/menu" . }}
+      </aside>
+  
+      <div class="book-posts">
+        {{ partial "docs/mobile-header" . }}
+        {{ template "main" . }}
+        {{ partial "docs/inject/footer" . }}
+      </div>
+    {{/* end */}}
   </main>
 
   {{ partial "docs/inject/body" . }}
