--- a/layouts/pages/baseof.html
+++ b/layouts/pages/baseof.html
@@ -10,6 +10,9 @@
 <body>
   <input type="checkbox" style="display: none" id="menu-control" />
   <main class="flex container">
+    <aside class="book-menu fixed">
+      {{ partial "docs/menu" . }}
+    </aside>
 
     <div class="book-posts">
       {{ partial "docs/mobile-header" . }}
