--- a/layouts/home.html
+++ b/layouts/home.html
@@ -6,24 +6,14 @@
   {{ partial "docs/html-head" . }}
   {{ partial "docs/inject/head" . }}
 </head>
-{{ $content := `
-# FKNMS MBON and IEA Webinized Infographics
-
-This is a placeholder for home page.
-An infographic will go here with clickable elements to the following pages:
-
- - <a href={{< relref "/pages/externalities/" >}}>Externalities</a>
- - <a href={{< relref "/pages/people/" >}}>People</a>
- - <a href={{< relref "/pages/marine_life/" >}}>Marine Life</a>
- - <a href={{< relref "/modals/info/" >}}>Info</a>
-
- <iframe src="svg/fl-keys.svg" width=100% height=1200>
-
-` }}
 <body>
   <main class="flex justify-center">
     <div class="book-home markdown">
-      {{ replace $content "&#96;" "`" | markdownify }}
+
+      {{.Content}}
+
+      <iframe src="svg/fl-keys.svg" width=100% height=1200>
+
     </div>
   </main>
 
