--- a/layouts/posts/baseof.html
+++ b/layouts/posts/baseof.html
@@ -11,12 +11,18 @@
   <input type="checkbox" style="display: none" id="menu-control" />
   <main class="flex container">
 
-    <div class="book-posts">
+    <aside class="book-menu fixed">
+      {{ partial "docs/menu" . }}
+    </aside>
+
+    <div class="book-page">
       {{ partial "docs/mobile-header" . }}
       {{ template "main" . }}
       {{ partial "docs/git-footer" . }}
       {{ partial "docs/inject/footer" . }}
     </div>
+
+    <!-- TODO: add [[ template "toc" . ]] -->
   </main>
 
   {{ partial "docs/inject/body" . }}
